# libgda

./: configure.ac
libgda/sqlite/virtual/: Makefile.am  gda-oslc-connection.c  gda-oslc-connection.h
m4/: oslc.m4
providers/: Makefile.am
providers/oslc/: Makefile.am  gda-oslc-provider.c  gda-oslc-provider.h  gda-oslc.h  libgda-oslc-6.0.pc.in  libmain.c  oslc.gresource.xml  oslc_specs_dsn.xml.in
